--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,20 +1,49 @@
 ---
-const { classes, ...rest } = Astro.props;
+const btnVarieties: Record<string, string> = {
+  default: "btn--default",
+  icon: "btn--icon",
+};
+
+const {
+  classes,
+  variety = "default",
+  isBordered,
+  background = "hsl(130, 50%, 50%)",
+  color = "hsl(130, 50%, 2%)",
+  ...rest
+} = Astro.props;
 ---
 
-<button class:list={["btn", classes]} {...rest}>
+<button
+  class:list={["btn", classes, btnVarieties[variety], { border: isBordered }]}
+  {...rest}
+>
   <slot />
 </button>
 
-<style>
+<style
+  define:vars={{
+    background,
+    color,
+  }}
+>
   .btn {
     font: inherit;
     display: flex;
-    gap: 0.23rem;
+    gap: 0.25rem;
     align-items: center;
     cursor: pointer;
     border: none;
+    background: var(--background);
+    color: var(--color);
+  }
+  .btn--default {
     padding: 4px 16px;
-    background: none;
+  }
+  .btn--icon {
+    aspect-ratio: 1/1;
+  }
+  .border {
+    border: 1px solid red;
   }
 </style>
