--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 import Button from "../components/Button.astro";
+import { Icon } from "astro-icon/components";
+import Heading from "../components/Heading.astro";
 ---
 
 <html lang="en">
@@ -11,7 +13,13 @@ import Button from "../components/Button.astro";
     <title>Astro</title>
   </head>
   <body>
-    <h1>Astro</h1>
-    <Button>Button</Button>
+    <Heading>Astro 1</Heading>
+    <!-- <Button id="my-btn" aria-label="Click me" variety="default" isBorderd -->
+    <!-- ><span>BUY</span> -->
+    <!-- <Icon name="cart" width={24} /> -->
+    <!-- </Button> -->
+    <!-- <Button id="my-btn" aria-label="Click me" variety="icon" isBorderd> -->
+    <!-- <Icon name="cart" width={24} /> -->
+    <!-- </Button> -->
   </body>
 </html>
