--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -1,5 +1,31 @@
 ---
-const { bkgColor } = Astro.props;
+import { type HTMLAttributes } from "astro/types";
+
+const headingOptions = {
+  h1: "xxl",
+  h2: "xl",
+  h3: "lg",
+  h4: "me",
+  h5: "sm",
+  h6: "xs",
+};
+
+interface Props extends HTMLAttributes<keyof typeof headingOptions> {
+  tagName: keyof typeof headingOptions;
+  size: keyof typeof headingOptions;
+  classes?: string;
+}
+
+const { tagName, size, classes, ...rest } = Astro.props;
+const Tag = tagName;
 ---
 
-<h1 class={`bg-${bkgColor}-400`}><slot /></h1>
+<Tag {...rest} class:list={["default", headingOptions[size], classes]}>
+  <slot />
+</Tag>
+
+<style>
+  .default {
+    line-height: 1.1;
+  }
+</style>
