--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,12 @@
 ---
-import Button from "../components/Button.astro";
-import { Icon } from "astro-icon/components";
-import Heading from "../components/Heading.astro";
+// import Button from "../components/Button.astro";
+// import { Icon } from "astro-icon/components";
+// import Heading from "../components/Heading.astro";
+//
+// const fakeHtml = `<h1>Hello World</h1>
+// <p>My name is Astro.</p>`;
+
+import data from "../data/cardData.json";
 ---
 
 <html lang="en">
@@ -13,7 +18,6 @@ import Heading from "../components/Heading.astro";
     <title>Astro</title>
   </head>
   <body>
-    <Heading>Astro 1</Heading>
     <!-- <Button id="my-btn" aria-label="Click me" variety="default" isBorderd -->
     <!-- ><span>BUY</span> -->
     <!-- <Icon name="cart" width={24} /> -->
