--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,8 @@
 
 import PricingCard from "../components/PricingCard.astro";
 import pricingCardData from "../data/cardData.json";
+
+import "../styles/main.css";
 ---
 
 <html lang="en">
@@ -19,6 +21,25 @@ import pricingCardData from "../data/cardData.json";
     <title>Astro</title>
   </head>
   <body>
-    {pricingCardData.map((card) => <PricingCard {...card} />)}
+    <main>
+      <div class="card-wrapper">
+        {pricingCardData.map((card) => <PricingCard {...card} />)}
+      </div>
+    </main>
+    <style>
+      main {
+        display: grid;
+        place-items: center;
+        min-height: 100vh;
+        padding: var(--space--xl);
+      }
+      .card-wrapper {
+        display: flex;
+        gap: var(--space--xl);
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+    </style>
   </body>
 </html>
