--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,19 @@
 import PricingCard from "../components/PricingCard.astro";
 import pricingCardData from "../data/cardData.json";
 
+export type Card = {
+  tier: string;
+  most_popular: boolean;
+  amount_per_month: number;
+  title: string;
+  description: string;
+  btn_text: string;
+  features: {
+    title: string;
+    checked: boolean;
+  }[];
+};
+
 import "../styles/main.css";
 ---
 
@@ -23,7 +36,11 @@ import "../styles/main.css";
   <body>
     <main>
       <div class="card-wrapper">
-        {pricingCardData.map((card) => <PricingCard {...card} />)}
+        {
+          pricingCardData.map((card: Card) => (
+            <PricingCard data={card} {...card} />
+          ))
+        }
       </div>
     </main>
     <style>
